Fixes to spacing

--- a/Styles.css
+++ b/Styles.css
@@ -68,7 +68,9 @@ a {
   padding: 50px;
   margin: auto;
   text-align: center;
+  align-items: center;
   display: flex;
+  justify-content: space-around;
   flex-direction: row;
 }
 .box1a {
@@ -77,7 +79,6 @@ a {
   width: 550px;
   height: 509px;
   background-color: #735c73;
-  margin-left: 110px;
 }
 
 .box2a {
@@ -85,7 +86,6 @@ a {
   border-radius: 0px;
   width: 575px;
   background-color: #735c73;
-  margin-left: 110px;
 }
 .bodyb {
   margin-left: 35px;
@@ -95,6 +95,8 @@ a {
   padding: 50px;
   margin: auto;
   text-align: center;
+  align-items: center;
+  justify-content: space-around;
   display: flex;
   flex-direction: row;
 }
@@ -104,7 +106,6 @@ a {
   width: 550px;
   height: 545px;
   background-color: #c883ac;
-  margin-left: 110px;
 }
 .box2b {
   border: 15px solid black;
@@ -112,7 +113,6 @@ a {
   width: 575px;
   height: 545px;
   background-color: #c883ac;
-  margin-left: 110px;
 }
 #logo {
   font-size: 100px;
